# tpmla

./: .gitignore  Arquitectura.drawio  Dockerfile  README.md  backfill.sh  clean.sh  docker-compose.yaml  pyproject.toml  quicksight.json  readme-local.txt  readme.txt  run.sh  stop.sh  sync-folder-s3.sh  volclean.sh
conf/: config.ini  copy-file-s3.sh  upd-creds.sh
dags/: calc_avg_delay.py  commons.py  config.ini  create_tables.py  detect_outliers.py  example_anomaly.py  flight_delay_dag.py  get_data_file.py  insert_avg_delay.py  models.py  plot_outliers.py  postgres_client.py  upload_plots.py
sql/: create-db.sql
